# MdSsg

./: .gitignore  CITATION.cff  pyproject.toml  repo-schema.json
.github/workflows/: test.yml
md_ssg/: cli.py
tests/: test_md_ssg.py
